--- a/doc/testing.adoc
+++ b/doc/testing.adoc
@@ -3,8 +3,7 @@
 
 If you are using `spring-boot-starter-test` module, and considering
 to use OAS stub for testing, you can easily integrate your tests
-with `oas-stub-spring-boot-starter-test` or `oas-stub-spring-stub-server`
-module.
+with `oas-stub-spring-boot-starter-test`.
 
 === `oas-stub-spring-boot-starter-test` module
 
@@ -19,13 +18,6 @@ module.
 </dependency>
 ----
 
-[WARNING]
-====
-This module requires a server, which means your test
-module must not use `SpringBootTest.WebEnvironment.MOCK` or
-`SpringBootTest.WebEnvironment.NONE`.
-====
-
 === Basic usage
 
 Suppose you have a Spring Boot application in `oas.example` package.
@@ -37,13 +29,21 @@ this:
 package ors.example;
 // imports...
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
-@AutoConfigureOasStub
+@AutoConfigureOasStubServer(port = 0)
 class ExampleApplicationTest {
     @Value("${local.server.port}")
     private int localPort;
 
+    // This gives the stub port
+    @OasStubServerHttpsPort
+    private int stubHttpPort;
+
     @Autowired
     private OasStubTestService oasStubTestService;
+
+    // The server bean
+    @Autowired
+    private OasStubServer oasStubServer;
 
     @Test
     void test() {
@@ -52,53 +52,15 @@ class ExampleApplicationTest {
 }
 ----
 
-`@AutoConfigureOasStub` annotation enables OAS stub on your application.
+`@AutoConfigureOasStubServer` annotation enables OAS stub on your application.
 
 `OasStubTestService` is a convenient service for testing, which
-provides API creation and validation methods. For more detail,
+provides API creation and validation methods. For more details,
 see the Javadoc.
 
-=== `oas-stub-spring-stub-server` module
-
-.Module
-[source, xml]
-----
-<dependency>
-    <groupId>io.github.ktakashi.oas.stub.spring</groupId>
-    <artifactId>oas-stub-spring-stub-server</artifactId>
-    <version>${oas-stub.version}</version>
-    <scope>test</scope>
-</dependency>
-----
-
-After you added the dependency, then you need to add `@AutoConfigureOasStubServer`
-annotation to your Spring Boot test.
-
-[source, java]
-----
-@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
-@AutoConfigureOasStubServer
-class ExampleApplicationTest {
-    @Value("${local.server.port}")
-    private int localPort;
-
-    @Autowired
-    private OasStubTestService oasStubTestService;
-
-    @Test
-    void test() {
-        // HTTP access `http://localhost:${localPort}`
-    }
-}
-----
-
-[WARNING]
-====
-If you, for some reason, put both modules into the classpath, then the
-Spring Boot will process the listeners defined in both modules. This
-causes OAS stub server start up failure. To avoid it, you need to put
-`oas.stub.test.server.shared` configuration to `true`.
-====
+`OasStubServer` is the server running independently. You can extract
+information, such as port number and server certificate. For more details,
+see the Javadoc.
 
 === Configurations
 
@@ -155,30 +117,14 @@ services:
 ----
 
 TIP: The context path `/oas` can be configured with
-`oas.stub.servlet.prefix`
+`oas.stub.test.server.stub-prefix`
 
 TIP: `/\__admin/\{endpoint}` endpoints are also loaded into the
 server, so users can create/modify API definitions via the REST endpoints. The endpoints will be
 `http://localhost:${oas.stub.test.server.port}/__admin/\{endpoint}`
 
-TIP: `/__admin` can be configured with `oas.stub.servlet.admin-prefix`.
+TIP: `/__admin` can be configured with `oas.stub.test.server.admin-prefix`.
 
 For the working example, please refer test directory of the
 https://github.com/ktakashi/oas-stub/tree/main/examples/petstore-broker[petstore-broker]
 example.
-
-=== Which testing module to use?
-
-Most of the case, you should use `oas-stub-spring-stub-server` module
-for testing. Using this module allow users not to share the port between
-the testing application and stub server.
-
-If you need custom stub endpoints, then `oas-stub-spring-boot-starter-test`
-might be the easiest solution. But be aware that, this module requires
-embedded tomcat provided by Spring Boot, which means, if your application
-is desired to be run on Netty, then the module may not work properly or
-you need to change the setup during testing.
-
-If your application is using Jetty related components provided by Spring
-Boot, then you may not be able to use `oas-stub-spring-stub-server` as
-mentioned above section.
