--- a/doc/start.adoc
+++ b/doc/start.adoc
@@ -8,84 +8,30 @@ We also assume, you are using Java 17 or later. OAS stub is built
 atop Java 17 toolchain, so if you are using Java 11, then you need
 to upgrade the JDK version.
 
-:spring-boot: footnote:[https://spring.io/projects/spring-boot]
-:guice: footnote:[https://github.com/google/guice]
-
-OAS stub provides two flavours of the DI implementations. One is
-Spring Boot{spring-boot} the other one is Guice{guice}. Below sections
-describe how to use them.
-
-=== Spring Boot
-
-To start with Spring Boot implementation, you need to add the
-`oas-stub-spring-boot-starter-web` artifact into your `pom.xml`
-like below.
-
-[source,xml]
+[source, xml]
 ----
 <dependency>
-    <groupId>io.github.ktakashi.oas.stub.spring</groupId>
-    <artifactId>oas-stub-spring-boot-starter-web</artifactId>
+    <groupId>io.github.ktakashi.oas.stub</groupId>
+    <artifactId>oas-stub-server</artifactId>
     <version>${oas-stub.version}</version>
 </dependency>
 ----
 
-Adding the above dependency enables autoconfiguration of the
-OAS stub. The rest of the work you need to do is executing the
-application, like the below example. (`import` clauses are omitted)
+Then you can write a very simple OAS Stub server like this:
 
 [source, java]
 ----
-package oas.example.spring;
+import io.github.ktakashi.oas.server.options.OasStubOptions;
+import io.github.ktakashi.oas.server.OasStubServer;
 
-@SpringBootApplication
-public class ExampleApplication {
-    public static void main(String[] args) {
-        SpringApplication.run(ExampleApplication.class, args);
+public class Main {
+    public static void main(String... args) {
+        var options = OasStubOptions.builder().build();
+        new OasStubServer(options).start();
+        Thread.currentThread().join(); // wait forever
     }
 }
 ----
-
-To build a standalone jar file, you need to add the below `<build>`
-section to your `pom.xml`.
-
-[source,xml]
-----
-<build>
-    <finalName>oas-stub-example</finalName>
-    <plugins>
-        <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>repackage</goal>
-                    </goals>
-                </execution>
-            </executions>
-            <configuration>
-                <classifier>dist</classifier>
-                <mainClass>oas.example.spring.ExampleApplication</mainClass>
-            </configuration>
-        </plugin>
-    </plugins>
-</build>
-----
-
-After you build the application, then you'll see
-`oas-stub-example-dist.jar` in `target/` directory. The jar file
-is an executable, so you can simply run like this:
-
-[source, shell]
-----
-java -jar ./target/oas-stub-example-dist.jar
-----
-
-The application provides Swagger UI for its admin endpoints.
-The URL of the above command's UI is
-`http://localhost:8080/swagger-ui.html`. If the application is
-deployed on a server, then adjust the scheme, host and port.
 
 Now, you are ready to upload your OAS file to the application.
 The easiest way to do it is using the above Swagger UI. If you
@@ -110,81 +56,3 @@ curl http://localhost:8080/oas/petstore/v1/pets
 Then you'll receive a JSON array with default value.
 
 TIP: The request against the API is validated unless specified not to do by you.
-
-=== Guice
-
-To start with Guice implementation, you need to add the
-`oas-stub-guice-module` artifact into your `pom.xml`
-like below.
-
-[source,xml]
-----
-<dependency>
-    <groupId>io.github.ktakashi.oas.stub.guice</groupId>
-    <artifactId>oas-stub-guice-module</artifactId>
-    <version>${oas-stub.version}</version>
-</dependency>
-----
-
-The below example is the minimum implementation of the OAS stub
-server on top of Guice. (`import` clauses are omitted)
-
-[source,java]
-----
-package oas.example.server;
-
-public class Main {
-    public static void main(String[] args) {
-        var configuration = OasStubGuiceServerConfiguration
-                .builder()
-                .build();
-        var injector = OasStubGuiceInjectors.createServerInjector(configuration);
-        var server = injector.getInstance(OasStubServer.class);
-        server.start();
-    }
-}
-----
-
-If you want to make an executable jar, then you need to build
-a fat jar.
-
-The running server provides the same endpoint as the Spring Boot
-version. You can use the same `curl` commands to upload the OAS
-specification and others.
-
-=== Which one to use
-
-Both implementation have pros and cons. Here you can find some
-of them.
-
-.Spring Boot
-****
-.Pros
-
-* Easy to add custom endpoints
-* Easy to configure other components, such as `ObjectMapper`
-
-.Cons
-
-* Mixing up beans with other application
-* Using the same port
-* Slow start up
-****
-
-.Guice
-****
-.Pros
-
-* Standalone server
-* Beans won't be mixed between other DI, e.g. Spring Boot application
-
-.Cons
-
-* Needs a bit more effort to make custom endpoints
-* Limited configuration of other components
-****
-
-In my personal opinion, Guice server is suitable for testing during
-build, and Spring Boot is suitable for deployment.
-
-
