--- a/doc/metrics.adoc
+++ b/doc/metrics.adoc
@@ -17,4 +17,4 @@ The endpoint returns a JSON object of API path as its key and
 metrics as its value.
 
 The metrics recording can be suppressed if the `shouldMonitor`
-option is set and its value is `true`.
+option is set and its value is `false`.
